test/classes/deitz/test_bad_function_noparens.chpl
def bar {
  writeln("this is not allowed");
}

bar;
